--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -29,6 +29,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    
+    packagingOptions {
+        exclude 'lib/mips/librsjni.so'
+        exclude 'lib/mips/libRSSupport.so'
+    }
 }
 
 dependencies {
